# span-panel-api

./: .codefactor  .codefactor.yml  .envrc  .gitignore  .local_coverage_data  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  DEVELOPMENT.md  README.md  SECURITY.md  conftest.py  developer_attribute_readme.md  generate_client.py  openapi.json  pyproject.toml  setup-hooks.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  release.yml
docs/: development.md  error-handling.md  gen2-client.md  gen3-client.md  simulation.md
docs/Dev/: cache-management.md  ebus-migration-plan.md  grpc-transport-design.md
docs/dev/: cache-management.md
examples/: README.md  battery_behavior_demo.py  behavior_test_config.yaml  clean_api_demo.py  demo_energy_sources.py  error_test_config.yaml  minimal_config.yaml  producer_test_config.yaml  simple_test_config.yaml  simple_test_config_no_sync.yaml  simulation_config_32_circuit.yaml  simulation_config_40_circuit_with_battery.yaml  simulation_config_8_tab_workshop.yaml  simulation_demo.py  test_multi_energy_sources.py  test_multi_energy_sources_fixed.py  test_simulation_time.py
generated_client/: .gitlab-ci.yml  .travis.yml  README.md  README.md.improved  __init__.py  pyproject.toml  setup.py  tox.ini
generated_client/.github/workflows/: python.yml
generated_client/.openapi-generator/: FILES
generated_client/docs/: AllowedEndpointGroups.md  AuthIn.md  AuthOut.md  BatteryStorage.md  BodySetCircuitStateApiV1CircuitsCircuitIdPost.md  BooleanIn.md  Branch.md  Circuit.md  CircuitNameIn.md  CircuitsOut.md  Client.md  Clients.md  DefaultApi.md  DoorState.md  FeedthroughEnergy.md  HTTPValidationError.md  IslandingState.md  MainMeterEnergy.md  NetworkStatus.md  NiceToHaveThreshold.md  PanelMeter.md  PanelPower.md  PanelState.md  Priority.md  PriorityIn.md  RelayState.md  RelayStateIn.md  RelayStateOut.md  SoftwareStatus.md  StateOfEnergy.md  StatusOut.md  SystemStatus.md  ValidationError.md  WifiAccessPoint.md  WifiConnectIn.md  WifiConnectOut.md  WifiScanOut.md
generated_client/span_panel_api_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
generated_client/span_panel_api_client/api/: __init__.py  default_api.py
generated_client/span_panel_api_client/models/: __init__.py  allowed_endpoint_groups.py  auth_in.py  auth_out.py  battery_storage.py  body_set_circuit_state_api_v1_circuits_circuit_id_post.py  boolean_in.py  branch.py  circuit.py  circuit_name_in.py  circuits_out.py  client.py  clients.py  door_state.py  feedthrough_energy.py  http_validation_error.py  islanding_state.py  main_meter_energy.py  network_status.py  nice_to_have_threshold.py  panel_meter.py  panel_power.py  panel_state.py  priority.py  priority_in.py  relay_state.py  relay_state_in.py  relay_state_out.py  software_status.py  state_of_energy.py  status_out.py  system_status.py  validation_error.py  wifi_access_point.py  wifi_connect_in.py  wifi_connect_out.py  wifi_scan_out.py
generated_client/test/: test_allowed_endpoint_groups.py  test_auth_in.py  test_auth_out.py  test_battery_storage.py  test_body_set_circuit_state_api_v1_circuits_circuit_id_post.py  test_boolean_in.py  test_branch.py  test_circuit.py  test_circuit_name_in.py  test_circuits_out.py  test_client.py  test_clients.py  test_default_api.py  test_door_state.py  test_feedthrough_energy.py  test_http_validation_error.py  test_islanding_state.py  test_main_meter_energy.py  test_network_status.py  test_nice_to_have_threshold.py  test_panel_meter.py  test_panel_power.py  test_panel_state.py  test_priority.py  test_priority_in.py  test_relay_state.py  test_relay_state_in.py  test_relay_state_out.py  test_software_status.py  test_state_of_energy.py  test_status_out.py  test_system_status.py  test_validation_error.py  test_wifi_access_point.py  test_wifi_connect_in.py  test_wifi_connect_out.py  test_wifi_scan_out.py
scripts/: __init__.py  coverage.py  format.sh  format_markdown.py  test_live_auth.py
scripts/validate_lug_derivation/: README.md  compare.py  run_local.sh.example  v1_reader.py  v2_reader.py
src/span_panel_api/: __init__.py  _http.py  auth.py  client.py  const.py  detection.py  exceptions.py  factory.py  models.py  phase_validation.py  protocol.py  simulation.py
src/span_panel_api/grpc/: __init__.py  client.py  const.py  models.py
src/span_panel_api/mqtt/: __init__.py  accumulator.py  async_client.py  client.py  connection.py  const.py  field_metadata.py  homie.py  models.py
tests/: conftest.py  test_32_panel_solar_unmapped.py  test_40_tab_unmapped.py  test_accumulator.py  test_async_mqtt_client.py  test_auth_and_homie_helpers.py  test_auth_and_simulation_helpers.py  test_authentication.py  test_bearer_token_validation.py  test_behavior_engine.py  test_behavior_engine_coverage.py  test_cache_functionality.py  test_client.py  test_client_caching.py  test_client_retry_properties.py  test_client_simulation_errors.py  test_client_simulation_start_time.py  test_context_manager.py  test_core_client.py  test_coverage_completion.py  test_detection_auth.py  test_enhanced_battery_behavior.py  test_enhanced_circuits.py  test_error_handling.py  test_example_phase_validation.py  test_exceptions.py  test_factories.py  test_field_metadata.py  test_generated_client.py  test_ha_compatibility.py  test_helpers.py  test_missing_coverage.py  test_mqtt_bridge.py  test_mqtt_client_connection.py  test_mqtt_connect_flow.py  test_mqtt_debounce.py  test_mqtt_homie.py  test_panel_circuit_alignment.py  test_phase3_mqtt.py  test_phase5_simulation_snapshot.py  (+20 more)
tests/docs/: simulation.md
tests/fixtures/configs/: battery_test_config.yaml  behavior_test_config.yaml  simple_test_config.yaml  simulation_config_32_circuit.yaml  simulation_config_40_circuit_with_battery.yaml  simulation_config_8_tab_workshop.yaml  (+1 more)
tests/simulation_fixtures/: circuits.response.txt  panel.response.txt  soe.response.txt  status.response.txt
(+4 files in other folders)
