[project]
name = "span-panel-api"
version = "2.2.3"
description = "A client library for SPAN Panel API"
authors = [
    {name = "SpanPanel"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "paho-mqtt>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/SpanPanel/span-panel-api"
Issues = "https://github.com/SpanPanel/span-panel-api/issues"

[tool.poetry]
packages = [
    {include = "span_panel_api", from = "src"},
]

[tool.poetry.scripts]
format-markdown = "scripts.format_markdown:main"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-cov = "*"
bandit = "1.9.4"
pre-commit = "*"
black = "*"
ruff = "^0.15.5"
mypy = "*"
pylint = "*"
radon = "*"
twine = "*"
vulture = "^2.14"
types-pyyaml = "^6.0.12.20250915"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 125
exclude = [
    "scripts/",
    ".*_cache/",
    "dist/",
    "venv/",
    ".venv/",
]

[tool.ruff.lint.per-file-ignores]
# Exclude tests from ALL linting checks (formatting still applies)
"tests/**/*.py" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",   # line too long - following Home Assistant's approach
    # May conflict with the formatter
    "W191",
    "E111",
    "E114",
    "E117",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"
exclude = [
    "scripts/",
    "tests/",
    "docs/",
    ".*_cache/",
    "dist/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "paho.*",
]
ignore_missing_imports = true


[tool.coverage.run]
data_file = ".local_coverage_data"
source = ["src/span_panel_api"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/.venv/*",
    "*/venv/*",
    "src/span_panel_api/mqtt/connection.py",
]

[tool.coverage.report]
fail_under = 85.0
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "# pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    # Import error handling - defensive code
    "except ImportError as e:",
    "raise ImportError\\(",
    # Defensive exception handling for edge cases
    "except Exception:",
    "except Exception as e:",
    "# Ignore errors during cleanup",
    "pass",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]

[tool.pylint.main]
load-plugins = ["pylint.extensions.no_self_use"]
extension-pkg-allow-list = []
ignore-paths = [
    "^tests/.*",
    "^scripts/.*",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-lines",
    "too-many-positional-arguments",
    "no-self-use",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 125

[tool.black]
line-length = 125
target-version = ["py312"]
skip-string-normalization = true
skip-magic-trailing-comma = false
exclude = '''
/(
    \.venv
    |venv
    |\.git
    |\.hg
    |\.mypy_cache
    |\.tox
    |\.nox
    |_build
    |buck-out
    |build
    |dist
    |scripts/coverage\.py
)/
'''

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
